# neuro-agent

./: .gitignore  AUTOSCROLL_FIX_SUMMARY.md  BEST_PRACTICES.md  CLAUDE.md  COMMIT_MESSAGE.md  COMO_USAR_LOGS.md  COMPLETE_FIX_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DIAGNOSTICS_FREEZE_FIX.md  DIAGNOSTIC_INSTRUCTIONS.md  DOCS_INDEX.md  EXECUTIVE_SUMMARY.md  FINAL_STATUS.md  FREEZE_FIX_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INPUT_ISSUE_ANALYSIS.md  LICENSE  LOGGING_GUIDE.md  LOGGING_IMPROVEMENTS.md  LOGGING_SETUP_COMPLETE.md  LOGGING_START_HERE.md  LOG_ANALYSIS.md  OLLAMA_DIAGNOSTICS.md  OUTPUT_FIX_SUMMARY.md  QUICK_START.md  QUICK_TEST.md  README.md  ROADMAP.md  SECURITY.md  SESSION_REPORT.md  SESSION_SUMMARY_2.md  SPRINT4_FINAL_REPORT.md  SPRINT_1_COMPLETE.md  SPRINT_1_REPORT.md  STREAMING_FIX.md  TESTING_GUIDE_FREEZE_FIX.md  TUI_ROUTER_INTEGRATION.md  config.en.example.json  config.example.json  (+8 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  logging.rs  main.rs
src/agent/: benchmarks.rs  classification_cache.rs  classifier.rs  code_review.rs  confidence.rs  diff_preview.rs  error_recovery.rs  events.rs  mod.rs  monitoring.rs  multistep.rs  orchestrator.rs  parallel_executor.rs  planning_orchestrator.rs  preloader.rs  progress.rs  prompts.rs  provider.rs  router.rs  router_orchestrator.rs  self_correction.rs  session.rs  state.rs  streaming.rs  task_progress.rs  undo_stack.rs
src/ast/: mod.rs
src/config/: mod.rs
src/context/: cache.rs  git_context.rs  manager.rs  mod.rs  related_files.rs
src/db/: migrations.rs  mod.rs  models.rs  repository.rs
src/embedding/: mod.rs  quantization.rs
src/i18n/: mod.rs
src/mcp/: mod.rs  server.rs
src/raptor/: builder.rs  chunker.rs  clustering.rs  incremental.rs  (+5 more)
tests/: CHANGELOG.md  EXAMPLES.md  QUICKSTART.md  README.md  TEST_SUMMARY.md  VISUAL_MAP.md  classification_tests.rs  functional_tests.rs  router_classification_tests.rs  tool_tests.rs
(+57 files in other folders)
