[package]
name = "neuro"
version = "0.1.0"
edition = "2021"
authors = ["MadKoding"]
description = "AI Programming Assistant with dual-model orchestration and RAPTOR-powered RAG"
license = "MIT"
repository = "https://github.com/madkoding/neuro-agent"
homepage = "https://github.com/madkoding/neuro-agent"
keywords = ["ai", "llm", "programming-assistant", "raptor", "ollama"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# === LLM / Agentes (rig-core) ===
rig-core = "0.6"

# === Async Runtime ===
tokio = { version = "1.44", features = ["full", "signal"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# === TUI ===
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# === SQLite Async ===
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "migrate"
]}

# === Serialización ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"

# === Seguridad/Hashing ===
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"

# === CLI ===
clap = { version = "4.5", features = ["derive"] }

# === Utilidades ===
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.11"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.14"
walkdir = "2.5.0"
num_cpus = "1.17.0"
hostname = "0.4.2"
dirs = "6.0.0"
toml = "0.9.10"

# === AST Parsing ===
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"

# === Embeddings ===
fastembed = "4.1"

# === Utilidades adicionales ===
lru = "0.12"
lazy_static = "1.4"
ordered-float = "4.6"
bincode = "1.3"

[[bin]]
name = "neuro"
path = "src/main.rs"
